--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg" href="https://icons.iconarchive.com/icons/icons8/ios7/48/Science-Math-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Multiplication Table</title>
   </head>
